--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <h1>
-Hello World
+Programming Interview Prep
 </h1>
 <h3>
-welcome</h3>
+Website under construction. Email info@programminginterviewprep.com for help with programming interviews</h3>
 </html>
