--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 </script>
   
+  
+<meta HTTP-EQUIV="REFRESH" content="0; url='http://www.meetup.com/Programming-Interview-Prep/'">
+  
 <h1>
 Programming Interview Prep
 </h1>
