--- a/faqs.html
+++ b/faqs.html
@@ -206,7 +206,7 @@
     	<section class="page-title" style="background-image:url(images/main-slider/2.jpg);">
     	<div class="auto-container">
         	<div class="sec-title">
-                <h1>FAQ'S</h1>
+                <h1>FAQ</h1>
               
             </div>
         </div>
