--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     data-endelementdelay="0.3"
                     data-endspeed="1200"
                     data-endeasing="Power4.easeIn"
-                    style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;"><h1 class="bold-heading" style="fontsize:25px;text-align:center;">Attend The Programming Interview Workshop<br /> ON 06-23-2014.</h1></div>
+                    style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;"><h1 class="bold-heading" style="fontsize:25px;text-align:center;">Attend The Programming Interview Workshop<br /> ON February 15, 2017.</h1></div>
                     
                     <div class="tp-caption lft tp-resizeme"
                     data-x="center" data-hoffset="0"
@@ -675,6 +675,7 @@
 <script src="js/jquery.fancybox.pack.js"></script>
 <script src="js/jquery.fancybox-media.js"></script>
 <script src="js/wow.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
