final touches to content

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         	<div class="join" style="margin-bottom:30px;" >
             <h1 style="text-align:center;font-size:30px;margin-bottom:25px;color:#25AAE1;">Why are we here?</h1>
            <div class="inner-box text-center">
-           <p>You may have all other valuable skills for a successful career in software engineering.  But none of them equates to the art of cracking programming interviews, the one skill that will have the most profound impact on your career.</p>
+           <p>You may have valuable skills for a successful career in software engineering.  However, none of them equates to the skill of cracking programming interviews, the one skill that will have the most profound impact on your career.</p>
            </div>
            <br />
            <div class="row why-here">
