--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         <div class="col-md-6 col-md-offset-3">
         	<div class="contact">
          
-             <form id="contactForm2" action="processForm.php" method="post">
+             <form id="contactForm2" action="https://formspree.io/interviewstudygroup@gmail.com" method="post">
 
         <label> Name <span>*</span></label>
         <input type="text" name="txt_name" ID="txt_name" class="form-control" required />
