linked list blog

--- a/blog3.html
+++ b/blog3.html
@@ -246,7 +246,7 @@
                                         <div class="text">
                                           
 					
-						<h1 style="text-align: center;">Arrays</h1>
+						<h1 style="text-align: center;">Linked List </h1>
 <p>&nbsp; <h3>Basic</h3></p>
 <ul>
 <li> Reverse a linked list </li>
@@ -269,7 +269,7 @@
 <li> Sort a linked list <li>
 <li> What sorting algorithm would you use? What would be the time and space complexity? </li>
 </ul>
-
+<p>
 <p><a href = "https://triplebyte.com/iv/NFVGEeU/me">TripleByte - Fast-track to onsite interviews at top tech and startups </a> </p>
 <p>&nbsp;</p>
 
