--- a/blog4.html
+++ b/blog4.html
@@ -237,7 +237,8 @@
 						<h1 style="text-align: center;">Trees and Tries</h1>
 <p>&nbsp; <h3>Warm-up</h3></p>
 <ul>
-<li> Find the depth of a tree </li>
+	<li><i> Find the depth of a tree </i> </li>
+	<li> Hint: test</li>
 </ul>
 
 					    
