--- a/blog4.html
+++ b/blog4.html
@@ -238,7 +238,7 @@
 <p>&nbsp; <h3>Warm-up</h3></p>
 <ul>
 	<li><i> Find the depth of a tree </i> </li>
-	<li> Hint: test</li>
+	
 </ul>
 
 					    
@@ -246,19 +246,22 @@
 <p>&nbsp; <h3>Regular</h3></p>
 <p>&nbsp;</p>
 <ul>
-	<li> Find the lowest common ancestor of two nodes in a binary tree (not binary search tree). </li>
-	<li> Print the nodes of a tree level by level. Print the nodes at even levels from left to right, and those at odd levels
-		from right to left </li>
+	<li> <i>Find the lowest common ancestor of two nodes in a binary tree (not binary search tree). <i></li>
+	<li> Hint: If a node is the LCA of two nodes, would those nodes be in the left sub-tree or the right sub-tree? </li>
+	<li><i> Print the nodes of a tree level by level. Print the nodes at even levels from left to right, and those at odd levels
+		from right to left </i></li>
+		<li>Hint: Not really a hint, but first write a program to just print the nodes by level </li>
 
 
 </ul>
 <ul>
 <p>&nbsp;</p>
-<p>&nbsp;<h4> Challenge (Optional)</h4></p>
+<p>&nbsp;<h3> Challenge (Optional)</h3></p>
 <p>&nbsp;</p>
 <ul> 
-<li> You are given a set of strings ("abc", "axyz", "abcz", "abergf"). Find the longest prefix that occurs in at least 3 strings. 
-	Answer: "ab". </li>
+<li> <i>You are given a set of strings ("abc", "axyz", "abcz", "abergf"). Find the longest prefix that occurs in at least 3 strings. 
+	Answer: "ab". </i> </li>
+	<li> Hint: Construct a trie! <li>
 </ul>
 <p>
 <p><a href = "https://triplebyte.com/iv/NFVGEeU/me">Checkout TripleByte - Direct onsite interviews at top tech and startups </a> </p>
