--- a/blog4.html
+++ b/blog4.html
@@ -237,7 +237,9 @@
 						<h1 style="text-align: center;">Trees and Tries</h1>
 <p>&nbsp; <h3>Warm-up</h3></p>
 <ul>
-	<li><i> Find the depth of a tree </i> </li>
+	<li><i> Find the height of a tree </i> </li>
+	<li> Hint: How would you calculate the height of a tree if you know the height of the left and right sub-trees? Remember, 
+		recursion is all about solving a similar but smaller problem </li>
 	
 </ul>
 
@@ -246,7 +248,7 @@
 <p>&nbsp; <h3>Regular</h3></p>
 <p>&nbsp;</p>
 <ul>
-	<li> <i>Find the lowest common ancestor of two nodes in a binary tree (not binary search tree). <i></li>
+	<li> <i>Find the lowest common ancestor of two nodes in a binary tree (not binary search tree). </i></li>
 	<li> Hint: If a node is the LCA of two nodes, would those nodes be in the left sub-tree or the right sub-tree? </li>
 	<li><i> Print the nodes of a tree level by level. Print the nodes at even levels from left to right, and those at odd levels
 		from right to left </i></li>
