--- a/blog4.html
+++ b/blog4.html
@@ -268,6 +268,8 @@
 <p>
 <p><a href = "https://triplebyte.com/iv/NFVGEeU/me">Checkout TripleByte - Direct onsite interviews at top tech and startups </a> </p>
 <p>&nbsp;</p>
+<p>Check out our Advanced bootcamp (Recursion, Dynamic Programming, System/Object Design) on the weekend of August 5/6. </p>
+<p>&nbsp;</p>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
