--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     data-endelementdelay="0.3"
                     data-endspeed="1200"
                     data-endeasing="Power4.easeIn"
-                    style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;"><h1 class="bold-heading" style="fontsize:25px;text-align:center;">Attend The Programming Interview Workshop <br/>  Silicon Valley, September 23/24,  2017.</h1></div>
+                    style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;"><h1 class="bold-heading" style="fontsize:25px;text-align:center;">Ask us about Holiday discounts for the programming interview workshop. </br> Available till December 2017. </h1></div>
                     
                     <div class="tp-caption lft tp-resizeme"
                     data-x="center" data-hoffset="0"
